# Lexical_Analyzer

./: .gitignore  CMakeLists.txt  DOC.md  DOCS.md  Makefile  README.md  grammar.txt  java_cfg.txt  lex-log.txt  main.cpp  source.txt  tokens.txt
DFA_Generator/: DFA_Generator.cpp  DFA_Generator.h  dfa.cpp  dfa.h
dfa_generator/: DFA_Generator.cpp  DFA_Generator.h
dfa_reduction/: DFA_Reducer.cpp  DFA_Reducer.h
graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  State.cpp  State.h
infix-to-postfix/: regex.cpp  regex.h
lexical-analyzer/: DOCS.md  Makefile  README.md  grammar.txt  lexical_analyzer  log.txt  main.cpp
lexical-analyzer-generator/: CMakeLists.txt  main.cpp
lexical-analyzer-generator/dfa_generator/: DFA_Generator.h
lexical-analyzer-generator/dfa_reduction/: DFA_Reducer.cpp  DFA_Reducer.h
lexical-analyzer-generator/regex-to-nfa/: Regex.cpp
lexical-analyzer/dfa_generator/: DFA_Generator.cpp  DFA_Generator.h
lexical-analyzer/dfa_reduction/: DFA_Reducer.cpp  DFA_Reducer.h
lexical-analyzer/graph/: Graph.cpp
lexical-analyzer/regex-to-nfa/: Regex.cpp  Regex.h  construct_NFA.cpp
parser/: Makefile  Parser.cpp  Parser.h  README.md  main.cpp
parser-generator/: CMakeLists.txt
parser-generator/first_follow/: First.cpp
parser-generator/grammar_reader/: CFG_Reader.cpp  CFG_Reader.h  Input_Reader.cpp  Input_Reader.h  Left_Recursion.cpp
parser-generator/parse_table/: Parse_Table.cpp  Parse_Table.h
parser-generator/parser/: Parser.cpp  Parser.h
parser-generator/table_generator/: Table_Generator.cpp  Table_Generator.h
parser/first_follow/: First.cpp  First.h  Follow.cpp  Follow.h
parser/grammar_reader/: CFG_Reader.cpp  CFG_Reader.h  Left_Recursion.cpp  Left_Recursion.h
parser/parse_table/: Parse_Table.cpp  Parse_Table.h
regex-to-nfa/: IDGenerator.cpp  IDGenerator.h  NFA.cpp  NFA.h  NFAState.cpp  NFAState.h  Regex.cpp  Regex.h  construct_NFA.cpp  construct_NFA.h  construct_nfa.cpp  construct_nfa.h  dfa.cpp  dfa.h  nfa.cpp  nfa.h
regex-to-nfa/tests/: test.cpp
test/: main.cpp  test_input_reader.h  test_parse_table.h  test_parser.h
